<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="install">Install</string>
    <string name="done">Done</string>
    <!-- TODO REMOVE LATER -->
    <string name="security_settings_desc">Allow this application to:</string>
    <string name="unknown">Unknown</string>
    <string name="install_done">Application installed</string>
    <string name="install_confirm_question">Do you want to install this application?</string>
    <string name="install_failed">Application not installed</string>
    <string name="install_failed_msg"><xliff:g id="app_name">%1$s</xliff:g> could not be installed on this phone.</string>
    <string name="launch">Open</string>
    <string name="unknown_apps_dlg_title">Install blocked</string>
    <string name="unknown_apps_dlg_text">For security, your phone is set to block installation of applications not obtained from Android Market.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="manage_applications">Manage applications</string>
    <string name="dlg_app_replacement_title">Replace application</string>
    <string name="dlg_app_replacement_statement">The application you are installing will replace another application.\n\nAll previous user data will be saved.</string>
    <!-- Dialog attributes when replacing system app -->
    <string name="dlg_sys_app_replacement_statement">This is a system application. Do you still want to replace it?\n\nAll previous user data will be saved.</string>
    <string name="out_of_space_dlg_title">Out of space</string>
    <!-- strings related to uninstall activity -->
    <string name="dlg_ok">OK</string>
    <string name="app_not_found_dlg_title">Application not found</string>
    <string name="app_not_found_dlg_text"> The application was not
found in the list of installed applications.</string>
    <string name="uninstall_application_question">Uninstall application?</string>
    <string name="uninstall_update_question">Uninstall update?</string>
    <string name="uninstall_application_text">This application will be uninstalled.</string>
    <string name="uninstall_update_text">The application update will be uninstalled. You can still use the factory version of the application.</string>
    <string name="uninstall_done">Uninstall finished</string>
    <string name="uninstall_failed">Uninstall not successful</string>
    <string name="uninstall_failed_msg"><xliff:g id="app_name">%1$s</xliff:g> could not be uninstalled</string>

    <!-- Dialog attributes to indicate parse errors -->
    <string name="Parse_error_dlg_title">Parse error</string>
    <string name="Parse_error_dlg_text">There is a problem parsing the package.</string>

    <string name="app_name">Package installer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="warm_remind">温馨提示</string>
    <string name="installing">程序安装中，请稍候…</string>
    <string name="uninstalling">正在卸载...</string>
    <string name="install_success">安装成功</string>
    <string name="uninstall_success">卸载成功</string>
    <string name="install_faill">安装失败</string>
    <string name="uninstall_fail">卸载失败</string>
    <string name="invaild_apk_stop_install">此应用家教机无法识别，请到【应用商城】下载安装。</string>
    <string name="finish">完成</string>
    <string name="open">打开</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="replace_app_title">要替换该应用吗？</string>
    <string name="replace_app_remind">您要安装的应用将替换另一应用。</string>
    <string name="replace_app_save_data_remind">系统将保存您以前所有的用户数据。</string>
    <string name="uninstall">卸载</string>
    <string name="uninstall_remind_content">卸载后，要使用此功能需重新安装，请谨慎操作！</string>
    <string name="flash_can_not_be_uninstall">flash播放器不能卸载！</string>
    <string name="out_of_space_dlg_text"><xliff:g id="app_name">%1$s</xliff:g>无法安装，请释放一些存储空间并重试。</string>
</resources>
