<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
            android:gravity="center_horizontal"
            android:background="@drawable/border_layout"
            android:orientation="vertical"
            android:id="@+id/appInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:clipChildren="true">

        <TextView
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replace_app_title"
                android:singleLine="true"/>

        <TextView
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/replace_app_remind"/>

        <TextView
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/replace_app_save_data_remind"/>
    </LinearLayout>

    <LinearLayout
            android:gravity="center_vertical"
            android:id="@+id/install_button_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp">

        <Button
                android:textSize="20sp"
                android:textColor="@color/black"
                android:background="@drawable/left_radius_button"
                android:gravity="center"
                android:textAlignment="gravity"
                android:id="@+id/cancel"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                />

        <Button
                android:textSize="20sp"
                android:background="@drawable/right_radius_button"
                android:textColor="@color/white"
                android:gravity="center"
                android:textAlignment="gravity"
                android:id="@+id/replace"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/replace"/>
    </LinearLayout>
</LinearLayout>