<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/layout"
              android:background="@drawable/remind_dialog_bg"
              android:layout_width="435dp"
              android:layout_height="wrap_content">

    <TextView
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/warm_remind"/>

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

        <ImageView
                android:id="@+id/appIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"/>

        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/appInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/appIcon"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/appIcon"
                android:layout_centerVertical="true">

            <TextView
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:id="@+id/appName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>

            <TextView
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:id="@+id/information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="30dp"
                android:layout_alignParentEnd="true"
                android:indeterminateDrawable="@drawable/my_progress"
                android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/install_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <Button
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/finish"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/sure_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"/>

        <Button
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/open"
                android:background="@drawable/sure_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_toRightOf="@+id/finish"
                android:layout_toEndOf="@+id/finish"
                android:text="@string/open"/>
    </RelativeLayout>

    <RelativeLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/uninstall_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <Button
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/sure"
                android:background="@drawable/sure_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sure"/>
    </RelativeLayout>
</LinearLayout>
